# FeishuArchiver

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.sisyphus/drafts/: feishu-project-archiving.md
scripts/: clean_db.py
src/db/: database.py
src/graph/: state.py  workflow.py
src/graph/nodes/: AGENTS.md  extract_and_archive.py  parse_document.py  score_and_decide.py
src/llm/: __init__.py
src/prompts/: __init__.py  extraction.py  scoring.py
tests/: conftest.py  test_extract_and_archive.py  test_meeting_minutes.md  test_meeting_minutes_greenyuan.md  test_meeting_minutes_yunjing.md  test_parse_document.py  test_score_and_decide.py
